@@ -1,3 +1,7 @@
+12/9/2002
+	- When caching a message, a response object can be constructed
+	  immediately.
+
 12/4/2002
 	- 1.3.1 released.
 
